--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@banksapitechnology/embeddable-finance-web-components@1.1.0/dist/efc-loader.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@banksapitechnology/embeddable-finance-web-components@1.2.1/dist/efc-loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@banksapitechnology/bam-web-component@1.1.0/dist/bam.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@banksapitechnology/regprotect-web-component@latest/dist/ba-regprotect.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@banksapitechnology/regprotect-web-component@1.0.0/dist/ba-regprotect.js"></script>
     <title>WEB/Connect Demo</title>
   </head>
   <body>
