--- a/capacitor-vue-app/index.html
+++ b/capacitor-vue-app/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/styles.demo.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB/Connect Demo</title>
 
     <style>
